<resources>
    <string name="app_name">CommUnity</string>
    <string name="chosen_time">Chosen Time: %1$d:%2$s %3$s"</string>
    <string name="chosen_date">Date Chosen: %1$s %2$d, %3$d</string>
    <string name="enter_address">Enter the address, city, state, and zip code in the textbox below or select Use Current Location</string>
    <string name="enter_location">Enter Location Here</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enter_task_here">Enter Task Here</string>
    <string name="submit">Submit</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="choose_a_time">Choose a Time</string>
    <string name="location_string">Location: %1$s</string>
    <string name="task_string">Task: %1$s</string>
    <string name="homeAddress">Home Address:</string>
    <string name="state">State:</string>
    <string name="town">Town:</string>
    <string name="bio">Short Bio:</string>
    <string name="firebase">(firebase)</string>
    <string name="something_from_firebase">(something from firebase)</string>
    <string name="yourName">Name:</string>
    <string name="nameEnter">Ex: Johnny Appleseed</string>
    <string name="stateEnter">Ex: Massachusetts</string>
    <string name="townEnter">Ex: Boston</string>
    <string name="addressEnter">Ex: 85 Prescott Street</string>
    <string name="bioEnter">Ex: -I like math</string>
    <string name="post">POST</string>
    <string name="postbutton">PostButton</string>
    <string name="a_hamburger_icon">a hamburger icon</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="task">Task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">My Profile</string>
    <string name="menu_tasksUp">Upcoming Tasks</string>
    <string name="menu_tasksPast">Past Tasks</string>
    <string name="menu_messaging">Messaging</string>

    <string name="home_second">Home Second</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="editButton">EDIT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveButton">SAVE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profPic">UPDATE PROFILE PICTURE</string>
    <string name="tasksPast">Completed Tasks</string>
    <string name="tasksUp">Upcoming Tasks</string>
    <string name="messaging">Messaging</string>
</resources>

