<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_account" />

        <item
        android:id="@+id/nav_tasksUp"
        android:icon="@drawable/ic_arrow_upward_black_24dp"
        android:title="@string/menu_tasksUp" />

        <item
            android:id="@+id/nav_tasksPast"
            android:icon="@drawable/ic_arrow_downward_black_24dp"
            android:title="@string/menu_tasksPast" />

        <item
            android:id="@+id/nav_messaging"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_messaging" />
    </group>
</menu>
